# tkgate

./: .gitignore  INSTALL  Makefile.am  Makefile.macos  README  README.verga  TODO  acinclude.m4  autogen.sh  config.h.in  configure.ac  gmac.1  options.h  pkg-descr  site-preferences  tkgate.1  verga.1
bindings/: emacs  windows
doc/: 74xx.txt  adding_gate_types.txt  gateEdit.html  gateGmac.html  gateHDL.html  gateInterface.html  gateIntro.html  gateLibrary.html  gateModules.html  gateOptions.html  gateSim.html  gateTypeList.html  index.html  license.txt  menagerie.html  menuList.html  popupmenu.html  simErrors.html  systemTasks.html  temp.html  tkgate.css  toolbarList.html  verga.html  vpdCreation.html
gdf/: default.gdf  pat.gdf
images/: Ujkff.xpm  Urjkff.xpm  about.xpm  add.b  addport.xpm  allleftarrow.b  allrightarrow.b  anchor.xpm  and.b  arrow0.xpm  arrow180.xpm  arrow270.xpm  arrow90.xpm  arshift.b  bat.b  bigcurs.b  biggatelogo.xbm  bigleftarrow.b  bigrightarrow.b  blk_claim.xpm  blk_close.xpm  blk_copy.xpm  blk_delete.xpm  blk_new.xpm  blk_open.xpm  blk_rename.xpm  blk_root.xpm  boxarrow.b  bp_bad.xpm  bp_disabled.xpm  bp_go.xpm  bp_standby.xpm  bp_stop.xpm  broken-img.xpm  buf.b  bug_curs.xpm  bug_curs_S.xpm  bus.b  checkoff.b  checkon.b  (+167 more)
locale/ca/: messages
locale/cs/: messages  x
locale/cy/: messages
locale/de/: messages
locale/de/examples/: index.v
locale/de/tutorials/: advanced.v  combinational1.v  combinational2.v  combinational3.v  combinational4.v  combinational5.v  create.v  gates.v  group.v  index.v  moddef_tut.v  modules.v  options.v  sequential1.v  sequential2.v  sequential3.v  sequential4.v  sequential5.v  verilog.v  welcome.v  wire2.v  wires.v
locale/de/tutorials.18/: create_tut.v  edit1_tut.v  edit2_tut.v  edwire_tut.v  module_tut.v  seqsim_tut.v  sim_tut.v  welcome_tut.v
locale/en/: messages
locale/en/examples/: index.v
locale/en/tutorials/: advanced.v  combinational1.v  combinational2.v  combinational3.v  combinational4.v  combinational5.v  create.v  gates.v  group.v  index.v  modules.v  options.v  sequential1.v  sequential2.v  sequential3.v  sequential4.v  sequential5.v  verilog.v  welcome.v  wires.v
locale/es/: messages
locale/fr/: messages
locale/it/: messages
locale/it/examples.18/: index.v
locale/it/tutorials.18/: create_tut.v  edit1_tut.v  edit2_tut.v  edwire_tut.v  module_tut.v  seqsim_tut.v  sim_tut.v  welcome_tut.v
locale/ja/: messages
locale/ja/obsolete-tutorials/: create_tut.v  edit1_tut.v  edit2_tut.v  edwire_tut.v  module_tut.v  seqsim_tut.v  sim_tut.v  welcome_tut.v
locale/ja/tutorials/: advanced.v  combinational1.v  combinational2.v  combinational3.v  create.v  (+17 more)
povray/: BIRCH.inc  BLOSSOM.tga  LEAF.tga  LEAFx.tga  OLIVE.inc  PALM.inc  ROOTS.inc  TESTTREE.inc  TOMLEAF.inc  TOMTREE.inc  TREE.pov  arrow0.pov  arrow180.pov  arrow270.pov  arrow90.pov  blackbox.pov  bug.pov  bug.tif  ccwrotate.pov  chip.inc  chip.pov  circuit.pov  circuit_prop.pov  colorprops.pov  cwrotate.pov  delay.pov  delchip.pov  details.pov  details.rca  dragon.inc  dragongate.pov  dragongate2.pov  gatelogo.pov  gateprops.pov  general.pov  hdl.pov  hills.pov  iface.pov  iface.xpm  mag.pov  (+28 more)
primitives/: README  adder.v  and.v  arshift.v  buf.v  clock.v  decoder.v  demux.v  div.v  flipflop.v  jkff.v  lshift.v  mult.v  mux.v  newdemux.v  nmos_trans.v  or.v  pmos_trans.v  ram.v  rand.v  register.v  roll.v  rom.v  ror.v  rshift.v  rxor.v  tribuf.v  xor.v
scripts/: action.tcl  blocklist.tcl  blockops.tcl  blocktree.tcl  breakpoint.tcl  circuit.tcl  cpath.tcl  debug.tcl  dragger.tcl  dropbox.tcl  editgate.tcl  errbox.tcl  file.tcl  find.tcl  frame.tcl  hdledit.tcl  helpon.tcl  indent.tcl  info.tcl  init.tcl  ipanel.tcl  keys.tcl  library.tcl  license.tcl  memview.tcl  menu.tcl  message.tcl  misc.tcl  mypane.tcl  nameframe.tcl  netlist.tcl  notebook.tcl  optdefaults.tcl  options.tcl  optionsdialog.tcl  pane.tcl  parms.tcl  popups.tcl  portlist.tcl  print.tcl  (+16 more)
src/: Makefile.am
src/common/: Makefile.am  hash.c  hash.h  list.c  list.h  misc.c  misc.h  vparser.h  ycmalloc.c  ycmalloc.h
src/gmac/: Makefile.am  gmac.c  gmac.h  grammar.c  grammar.h  grammar.y  luthor.c  luthor.l  parser.c  parser.h
src/tkgate/: Makefile.am  adder.c  and.c  arshift.c  ascii.c  block.c  breakpoint.c  breakpoint.h  buffer.c  circuit.c  circuit.h  clock.c  comment.c  concat.c  cpath.c  cpath.h  cursors.c  decoder.c  delay.c  delay.h  demux.c  dip.c  divide.c  edit.c  editstate.c  editstate.h  elements.h  error.c  error.h  expr.c  expr.h  flipflop.c  fonts.c  fonts.h  frame.c  functions.c  functions.h  gates.c  gates.h  generic.c  (+92 more)
src/tools/: Makefile.am  README  blue.txt  colors.c  colors.txt  cyan.txt  genmsg  green.txt  magenta.txt  msgdiff.c  mvtag.c  red.txt  yellow.txt
src/verga/: Makefile.am  bytecode.c  bytecode.h  channel.c  channel.h  circuit.c  circuit.h  commands.c  directive.c  directive.h  dynitem.h  error.c  error.h  evqueue.c  evqueue.h  expr.c  expr.h  io.c  io.h  luthor.c  luthor.l  memory.c  memory.h  mitem.c  mitem.h  module.c  module.h  multint.c  multint.h  net.c  net.h  operators.c  operators.h  pathmod.c  paux.c  specify.c  specify.h  statement.c  statement.h  systask.c  (+16 more)
test/tkgate/: VonNeumann.mem  VonNeumann.v  adder.v  adder.vs  clock.v  error.v  error2.v  error3.v  error4.v  error5.v  greek.v  hanoi.v  hanoi2.v  hdl.v  l1.v  l2.v  label.v  new.v  size.v  spec4.v  symbol.v  test.v  timer.v  timer2.v  tiny.v  wand.v  xx.v  y.v
test/verga/: adder1.out  adder1.v  adder2.out  adder2.v  adder3.out  adder3.v  always1.out  always1.v  ashift.out  ashift.v  bitselect1.out  bitselect1.v  bitselect2.out  bitselect2.v  bitselect3.out  bitselect3.v  buf.out  buf.v  bufif.out  bufif.v  case1.out  case1.v  channel1.out  channel1.v  command1.out  command1.v  concat.out  concat.v  define.out  define.v  display1.out  display1.v  display2.out  display2.v  edges1.out  edges1.v  edges2.out  edges2.v  errors.out  errors.v  (+88 more)
test/verga-realtime/: README  timer1.v  timer2.v
vlib/: 74xx.v  coke.v  timer.v  timer.xv  tty.v
vpd/: coke.tcl  tty.tcl
(+32 files in other folders)
